--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  box-sizing: none;
+  box-sizing: border-box;
 }
 
 body{
@@ -10,7 +10,7 @@ body{
 }
 
 nav{
-  background-color: rgba(255, 255, 255, 0.5); 
+  background-color: rgba(255,255,255,0.5);
   backdrop-filter: blur(14px);
   height: 44px;
   position: fixed;
@@ -21,13 +21,12 @@ nav{
 
 .menu-icon{
   position: fixed;
-  top: 7px;
+  top: 8px;
   right: 15px;
   padding: 12px 2px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 5px;
 }
 
 .menu-icon div{
@@ -37,25 +36,28 @@ nav{
   background-color: black;
   margin: 0 2px;
 }
-nav .name{
-  font-family: 'Borel',sans-serif;
-  color: black;
-  font-weight: 700;
+
+nav .logo{
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  clip-path: polygon(0 100%,50% 0,100% 100%,80% 100%,50% 40%,20% 100%);
   position: fixed;
   top: 12px;
   left: 15px;
 }
 
 nav a{
+  font-weight: 500;
+  font-size: 15px;
   position: fixed;
   top: 44px;
   right: 15px;
   background-color: white;
-  padding: 5px 20px;
+  color: royalblue;
+  padding: 3px 18px;
   border-radius: 10px;
   box-shadow: -3px 3px 6px rgba(0, 0, 0, 0.6);
-  color: blue;
-  font-size: 15px;
   transform-origin: 100% 0;
   transform: scale(0);
 }
@@ -67,6 +69,7 @@ body.appear{
 
 .menu-icon.appear{
   border: 1px solid black;
+  border-radius: 5px;
 }
 
 nav a.appear{
@@ -85,3 +88,25 @@ nav a.appear{
 }
 }
 /*===*/
+
+.profile{
+  margin: 60px 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.profile-picture{
+  width: 60px;
+  border-radius: 50%;
+}
+
+.about-me{
+  margin-left: 10px;
+}
+
+.about-me .description{
+  color: gray;
+  position: relative;
+  bottom: 5px;
+  font-size: 15px;
+}
